RDKBDEV-225:Update Utopia to support RdkWanManager Implementation
Reason for change: Update utopia code base to support RdkWanManager
application. This commit includes:

1. Modify service_udhcpc.c which is using as action handler
for udhcpc for DHCPv4 feature.
2. Use nanomsg IP to communicate with RdkWanManager to send
DHCPv4 configuration data.

Test Procedure:
1. Build won't break
2. udhcpc got IP configurations and invoked service_udhcpc handler
3. service_udhcpc passed the configurations and RdkWanmanager received the configuration

Risks: Low

Change-Id: I085b283a16eb0d0f451d093ae36b682472e0d53e
Signed-off-by: Vysakh Venugopal <vysakh.venugopal@sky.uk>

--- a/source/service_udhcpc/Makefile.am
+++ b/source/service_udhcpc/Makefile.am
@@ -20,7 +20,7 @@ bin_PROGRAMS = service_udhcpc
 
 AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils $(CPPFLAGS)
 
-AM_LDFLAGS =  -lpthread -lz
+AM_LDFLAGS =  -lpthread -lz -lnanomsg
 
 service_udhcpc_SOURCES = service_udhcpc.c
 
