RDKB-33031: Fix warnings for Utopia
Reason for change: To fix the warnings in Utopia.
1.initialization makes integer from pointer without a cast [enabled by default]
2.missing initializer for field[-Wmissing-field-initializers]
3.implicit declaration of function [-Wimplicit-function-declaration]
4.assignment makes pointer from integer without a cast [enabled by default]
5.passing argument <argument_number> from incompatible pointer type [enabled by default]
6.format '%s' expects argument of type 'char *', but argument 3 has type 'char **' [-Wformat=]
7.conflicting types [enabled by default]
8.incompatible implicit declaration of built-in function[enabled by default]
9.passing argument <arg_num> of '<func_name>' makes pointer from integer without a cast [enabled by default]
10.second parameter of 'va_start' not last named argument [-Wvarargs]
11.argument to 'sizeof' in 'memset' call is the same expression as the destination; did you mean to dereference it? [-Wsizeof-pointer-memaccess]
12.variable set but not used [-Wunused-but-set-variable]
13.unused variable[-Wunused-variable]
14.unused parameter [-Wunused-parameter]
15.assignment discards 'const' qualifier from pointer target type [enabled by default]
16.redefined [enabled by default]
17.case value '9' not in enumerated type 'wifiTxRate_t' [-Wswitch]
18.zero-length gnu_printf format string [-Wformat-zero-length]
19.statement with no effect [-Wunused-value]
20.control reaches end of non-void function [-Wreturn-type]
21.parameter 'out_list' set but not used [-Wunused-but-set-parameter]
22.passing argument <arg_num> of <func_name> discards 'const' qualifier from pointer target type [enabled by default]
23.too many arguments for format [-Wformat-extra-args]
24.call to 'system' declared with attribute warning: please replace system() with v_secure_system() [enabled by default]
25.initialization from incompatible pointer type [enabled by default]
26.multi-line comment [-Wcomment]
27.'return' with a value, in function ret

--- a/source/igd/src/Makefile.am
+++ b/source/igd/src/Makefile.am
@@ -33,7 +33,8 @@ IGD_CPPFLAGS = 	-I$(top_srcdir)/source/pal/upnp/include \
 		-I$(top_srcdir)/source/pal/include \
 		-I$(top_srcdir)/source/pal/log/include \
 		-I$(top_srcdir)/source/igd/src/inc \
-		-I$(top_srcdir)/source/include
+		-I$(top_srcdir)/source/include \
+		-I$(top_srcdir)/source/include/utapi
 
 IGD_SOURCES = igd_service_wan_ethlink_cfg.c igd_device_root.c igd_utility.c igd_device_lan.c igd_service_wan_commif_cfg.c igd_action_port_mapping.c igd_device_wan_connect.c igd_device_wan.c igd_platform_independent_inf.c igd_service_lanhostconfigmgmt.c igd_service_wan_connect.c igd_service_layer3_fwd.c
 
