--- a/source/utapi/lib/Makefile.am
+++ b/source/utapi/lib/Makefile.am
@@ -27,7 +27,7 @@ ACLOCAL_AMFLAGS = -I m4
 hardware_platform = i686-linux-gnu
 
 lib_LTLIBRARIES = libutapi.la
-libutapi_la_CPPFLAGS = -I$(top_srcdir)/source/include $(CPPFLAGS) \
+libutapi_la_CPPFLAGS = -I$(top_srcdir)/source/include -I$(top_srcdir)/source/utapi/lib $(CPPFLAGS) \
 			-I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 \
 			-I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
 libutapi_la_SOURCES = utapi_tr_wlan.c utapi.c utapi_util.c tr181_util.c utapi_parental_control.c tr181_wrpr.c utapi_wlan.c utapi_security.c utapi_dns.c utapi_tr_dhcp.c utapi_tr_user.c utapi_moca.c utapi_dslite.c
