RDKB-33527: Instrument utopia component to use Telemetry 2.0
Reason for change:
Test Procedure:
Risks: Low
Signed-off-by:Veeraputhiran_Thangavel@comcast.com

RDKB-33935 : RF_ERROR_LAN_stop marker is reported when lan-stop is not NULL

Reason for change: RF_ERROR_LAN_stop marker string is "lan_handler called with lan-stop NULL"
So marker should be reported only when lan-stop is NULL. This lan-stop & NULL check were missing.
It is now added.
Test Procedure:
Risks: Low
Signed-off-by:Veeraputhiran_Thangavel@comcast.com

Change-Id: I29c1a5d1899f9bbed670e60c510b5efd69c80aa3

RDKB-34028: btime_laninit_split marker is not observed in telemetry log

Reason for change:
Test Procedure:
Risks: Low
Signed-off-by:Veeraputhiran_Thangavel@comcast.com

Change-Id: Ic06dfda5c8c199a549138311764bc5919a8a5491

RDKB-34075: Remove markers from apply_system_defaults

Reason for change: rbus_open has some limitation. So T2 markers block the system boot up when we factory reset.
These markers will be instrumented in separate userstory once rbus changes are ready.
Test Procedure:
Risks: Low
Signed-off-by:Veeraputhiran_Thangavel@comcast.com

Change-Id: I31f3075db49196614e4bdfb0961a536016ed4b18

RDKB-34324: SYS_INFO_CaptivePortal is not coming in Telemetry

Reason for change:
Test Procedure:
dmcli eRT getv Device.DeviceInfo.X_RDKCENTRAL-COM_CaptivePortalEnable
dmcli eRT getv Device.DeviceInfo.X_RDKCENTRAL-COM_ConfigureWiFi
dmcli eRT setv Device.DeviceInfo.X_RDKCENTRAL-COM_CaptivePortalEnable bool true
dmcli eRT setv Device.DeviceInfo.X_RDKCENTRAL-COM_ConfigureWiFi bool true
dmcli eRT getv Device.DeviceInfo.X_RDKCENTRAL-COM_CaptivePortalEnable
dmcli eRT getv Device.DeviceInfo.X_RDKCENTRAL-COM_ConfigureWiFi
dmcli eRT getv Device.DeviceInfo.X_RDKCENTRAL-COM_WiFiNeedsPersonalization

dmcli eRT setv Device.WiFi.SSID.1.SSID string "Test"
dmcli eRT setv Device.WiFi.SSID.2.SSID string "Test"

dmcli eRT getv Device.WiFi.SSID.1.SSID
dmcli eRT getv Device.WiFi.AccessPoint.1.Security.KeyPassphrase
dmcli eRT

--- a/source/service_udhcpc/Makefile.am
+++ b/source/service_udhcpc/Makefile.am
@@ -18,7 +18,7 @@
 ##########################################################################
 bin_PROGRAMS = service_udhcpc
 
-AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils $(CPPFLAGS) -I$(top_srcdir)/source/util/print_uptime
+AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils $(CPPFLAGS) -I$(top_srcdir)/source/util/print_uptime -I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 -I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
 
 AM_LDFLAGS =  -lpthread -lz
 
@@ -29,4 +29,5 @@ service_udhcpc_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
                     $(top_builddir)/source/sysevent/lib/libsysevent.la \
                     $(top_builddir)/source/syscfg/lib/libsyscfg.la \
                     $(top_builddir)/source/ulog/libulog.la \
-                    $(top_builddir)/source/util/print_uptime/libprint_uptime.la
+                    $(top_builddir)/source/util/print_uptime/libprint_uptime.la \
+		    -ltelemetry_msgsender
