--- a/source/util/print_uptime/Makefile.am
+++ b/source/util/print_uptime/Makefile.am
@@ -22,11 +22,10 @@ AM_CFLAGS = -Wall -Wextra
 
 lib_LTLIBRARIES=libprint_uptime.la
 libprint_uptime_la_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include
-libprint_uptime_la_LDFLAGS = -shared -fPIC
+libprint_uptime_la_LDFLAGS = -shared -fPIC -ltelemetry_msgsender
 libprint_uptime_la_SOURCES = print_uptime.c
 
 bin_PROGRAMS = print_uptime
-print_uptime_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/print_uptime
+print_uptime_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/print_uptime -I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 ${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
 print_uptime_SOURCES = main.c
 print_uptime_LDADD = libprint_uptime.la
-
