--- a/source/service_dhcp/Makefile.am
+++ b/source/service_dhcp/Makefile.am
@@ -25,7 +25,9 @@ service_dhcp_CPPFLAGS = -I$(top_srcdir)/include \
 						-I$(top_srcdir)/source/util/utils \
                                                 -I$(top_srcdir)/source/util/print_uptime \
 						-I$(top_srcdir)/source/service_dhcp/include \
-						$(DBUS_CFLAGS)
+						$(DBUS_CFLAGS) \
+						-I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 \
+						-I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
 
 service_dhcp_SOURCES = service_dhcp.c lan_handler.c \
                        dhcp_server_functions.c service_dhcp_server.c \
@@ -34,4 +36,5 @@ service_dhcp_SOURCES = service_dhcp.c lan_handler.c \
 service_dhcp_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
 		     $(top_builddir)/source/sysevent/lib/libsysevent.la \
 		     $(top_builddir)/source/syscfg/lib/libsyscfg.la \
-                     $(top_builddir)/source/util/print_uptime/libprint_uptime.la 
+                     $(top_builddir)/source/util/print_uptime/libprint_uptime.la \
+		     -ltelemetry_msgsender
