--- a/source/service_routed/Makefile.am
+++ b/source/service_routed/Makefile.am
@@ -30,4 +30,7 @@ service_routed_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
                     $(top_builddir)/source/syscfg/lib/libsyscfg.la \
                     $(top_builddir)/source/utapi/lib/libutapi.la \
                     $(top_builddir)/source/utctx/lib/libutctx.la \
-                    $(top_builddir)/source/ulog/libulog.la
+                    $(top_builddir)/source/ulog/libulog.la \
+		    -ltelemetry_msgsender
+
+service_routed_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/utctx/lib -I$(top_srcdir)/source/utapi/lib -I$(top_srcdir)/source/util/utils -I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 -I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
