RDKB-33241: Redesign print_uptime
Reason for change: To link print_uptime library and replace print_uptime system call with function call
Test Procedure: Please refer JIRA ticket
Risks: None
Signed-off-by: gayathri_buddappagari@comcast.com

RDKB-33903: boottime telemetry markers are not uploading from device to splunk

Reason for change: To modify telemetry marker string
Test Procedure: Please refer JIRA ticket
Risks: None
Signed-off-by: gayathri_buddappagari@comcast.com

Change-Id: I152e7b0619042a3b3924f373a84c6e8628a0f278
(cherry picked from commit 2341d7daacb15b5c4abe9501e092ed73ede18065)

--- a/source/service_dhcp/Makefile.am
+++ b/source/service_dhcp/Makefile.am
@@ -23,6 +23,7 @@ AM_LDFLAGS =  -lpthread -lz -lccsp_common $(DBUS_LIBS)
 service_dhcp_CPPFLAGS = -I$(top_srcdir)/include \
 						-I$(top_srcdir)/source/include \
 						-I$(top_srcdir)/source/util/utils \
+                                                -I$(top_srcdir)/source/util/print_uptime \
 						-I$(top_srcdir)/source/service_dhcp/include \
 						$(DBUS_CFLAGS)
 
@@ -31,5 +32,6 @@ service_dhcp_SOURCES = service_dhcp.c lan_handler.c \
                        service_ipv4.c
 
 service_dhcp_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
-        		     $(top_builddir)/source/sysevent/lib/libsysevent.la \
-					 $(top_builddir)/source/syscfg/lib/libsyscfg.la
+		     $(top_builddir)/source/sysevent/lib/libsysevent.la \
+		     $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                     $(top_builddir)/source/util/print_uptime/libprint_uptime.la 
