--- a/source/util/Makefile.am
+++ b/source/util/Makefile.am
@@ -16,4 +16,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-SUBDIRS = rpc utils
+SUBDIRS = rpc utils print_uptime
