--- a/source/util/print_uptime/Makefile.am
+++ b/source/util/print_uptime/Makefile.am
@@ -16,17 +16,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
-bin_PROGRAMS = service_udhcpc
+AM_CFLAGS = -fno-exceptions
+AM_CFLAGS = -Os 
+AM_CFLAGS = -Wall -Wextra
 
-AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils $(CPPFLAGS) -I$(top_srcdir)/source/util/print_uptime
+lib_LTLIBRARIES=libprint_uptime.la
+libprint_uptime_la_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include
+libprint_uptime_la_LDFLAGS = -shared -fPIC
+libprint_uptime_la_SOURCES = print_uptime.c
 
-AM_LDFLAGS =  -lpthread -lz
+bin_PROGRAMS = print_uptime
+print_uptime_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/print_uptime
+print_uptime_SOURCES = main.c
+print_uptime_LDADD = libprint_uptime.la
 
-service_udhcpc_SOURCES = service_udhcpc.c
-
-service_udhcpc_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
-                    $(top_builddir)/source/services/lib/libsrvmgr.la \
-                    $(top_builddir)/source/sysevent/lib/libsysevent.la \
-                    $(top_builddir)/source/syscfg/lib/libsyscfg.la \
-                    $(top_builddir)/source/ulog/libulog.la \
-                    $(top_builddir)/source/util/print_uptime/libprint_uptime.la
