RDKB-34829 : dnsmasq markers are not getting reported in T2.0
Reason for change: dnsmasq restart happening with pmon binary, so t2_event_d should be used in pmon.c
Test Procedure:
1) Enable telemetry 2.0 and rbus
2) reboot the device if any of the feature is not enabled
3) kill dnsmasq
4) Monitor SYS_INFO_dhcp_server_start in splunk
Risks: Low
Signed-off-by:manish_lepuru@comcast.com

(cherry picked from commit 82aff0b224f9550f1e6c843828c35f90ad43bb5f)
Change-Id: I50e05c866cf2cd7cab1d7096b2438ea879181e5c

--- a/source/pmon/Makefile.am
+++ b/source/pmon/Makefile.am
@@ -36,4 +36,5 @@ pmon_LDFLAGS =  -lpthread -lz
 pmon_LDADD = $(top_builddir)/source/services/lib/libsrvmgr.la \
              $(top_builddir)/source/sysevent/lib/libsysevent.la \
              $(top_builddir)/source/ulog/libulog.la \
-             $(top_builddir)/source/syscfg/lib/libsyscfg.la
+             $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+             -ltelemetry_msgsender
