RDKB-36146 : Integrate gtest framework for Utopia
Reason for change: To create a downloadable module for Utopia gtest binary
Test Procedure: Verify whether Utopia tar is created in s3 artificats
Risks: Low
Signed-off-by: Sunu_Sunil@comcast.com

(cherry picked from commit 13052f249d1d4a830139e3e3010d94dd1afd2de2)
(cherry picked from commit 4cc4ba937390994291ae661035a82ec04233a01b)
Change-Id: I4ed4a1b5735a773e4a892e424e4bf1ac5ff51885

--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,21 @@ AC_PREREQ([2.65])
 AC_INIT([Utopia], [1.0], [BUG-REPORT-ADDRESS])
 AM_INIT_AUTOMAKE
 LT_INIT
+GTEST_ENABLE_FLAG = ""
 
+AC_ARG_ENABLE([gtestapp],
+             AS_HELP_STRING([--enable-gtestapp],[enable Gtest support (default is no)]),
+             [
+               case "${enableval}" in
+                yes) GTEST_SUPPORT_ENABLED=true
+                     GTEST_ENABLE_FLAG="-DGTEST_ENABLE"
+                     m4_if(m4_sysval,[0],[AC_CONFIG_FILES([source/test/Makefile])]);;
+                no) GTEST_SUPPORT_ENABLED=false AC_MSG_ERROR([Gtest support is disabled]);;
+                 *) AC_MSG_ERROR([bad value ${enableval} for --enable-gtestapp ]);;
+               esac
+             ],
+             [echo "Gtestapp is disabled"])
+AM_CONDITIONAL([WITH_GTEST_SUPPORT], [test x$GTEST_SUPPORT_ENABLED = xtrue])
 AC_PREFIX_DEFAULT(`pwd`)
 AC_ENABLE_SHARED
 AC_DISABLE_STATIC
@@ -34,6 +48,7 @@ AC_CONFIG_MACRO_DIR([m4])
 
 # Checks for programs.
 AC_PROG_CC
+AC_PROG_CXX
 AC_PROG_INSTALL
 AM_PROG_CC_C_O
 AM_PROG_LIBTOOL(libtool)
@@ -180,6 +195,6 @@ AC_CONFIG_FILES(
 	Makefile
 )
 
-
+AC_SUBST(GTEST_ENABLE_FLAG)
 AC_OUTPUT
 
