RDKB-40485 : Firewall changes for EXT device
Reason for change: Firewall changes for EXT device

Test Procedure:

Risks: low
Signed-off-by: Santosh Nayak SantoshRamesh_Nayak@cable.comcast.com

RDKB-40485 : Firewall changes for EXT device

Reason for change: Firewall changes for EXT device

Test Procedure:

Change-Id: Icdc06818de0402db346cf493a9224cda9740540e
Risks: low
Signed-off-by: Santosh Nayak SantoshRamesh_Nayak@cable.comcast.com

RDKB-40485 : Firewall changes for EXT device

Reason for change: Firewall changes for EXT device

Test Procedure:

Change-Id: I897fdc93ab1021ee53911448bae6d346019c7582
Risks: low
Signed-off-by: Santosh Nayak SantoshRamesh_Nayak@cable.comcast.com
(cherry picked from commit 3f303fd520537c781c26145e41498d5dabd18e80)
(cherry picked from commit 6fc9c6aa526333255c23a54ec2e14ea3bd6354e3)

--- a/source/firewall/Makefile.am
+++ b/source/firewall/Makefile.am
@@ -23,7 +23,7 @@ AM_LDFLAGS = -lccsp_common -lsecure_wrapper -lnetfilter_queue -lnfnetlink $(DBUS
 
 bin_PROGRAMS = firewall nfq_handler
 
-firewall_SOURCES = firewall.c firewall_priv.c firewall_interface.c
+firewall_SOURCES = firewall.c firewall_priv.c firewall_interface.c  firewall_ext.c
 if CPC_FIREWALL_ENABLE
 firewall_SOURCES += firewall_lib.c firewall_dsl.c rabid.c
 endif
