RDKCOM-3421: RDKBDEV-1355: c_registration: reenable building of 02_ipv6
Reason for change:
Disabled by Comcast, but may be required by others. Reenabling here
just means that the code gets built (ie it also needs to be installed
in order to work).
Test Procedure: Sanity.
Risks: None.
Signed-off-by: Andre McCurdy <armccurdy@gmail.com>

(cherry picked from commit 878e8928c7c9fb68b877e5e159a7b3f7bacd3936)
Change-Id: I94e6e9527382a912e106d74e7e95dd8fc508ffd3

--- a/source/scripts/init/c_registration/Makefile.am
+++ b/source/scripts/init/c_registration/Makefile.am
@@ -36,6 +36,7 @@ bin_PROGRAMS = \
     02_bridge \
     02_forwarding \
     02_ipv4 \
+    02_ipv6 \
     02_lanHandler \
     02_multinet \
     02_parodus \
