RDKCOM-2940: RDKBDEV-980: service_dslite: autotools cleanup
Reason for change:
service_dslite: autotools cleanup
Test Procedure: Build only.
Risks: None.
Signed-off-by: Andre McCurdy <armccurdy@gmail.com>

(cherry picked from commit c9708cf871fcaea6103833b46b795f2c549d02b0)
Change-Id: I813752e477b3f6ee9abab7ba018e6ac5ced26c30

--- a/source/service_dslite/Makefile.am
+++ b/source/service_dslite/Makefile.am
@@ -16,14 +16,11 @@
 
 bin_PROGRAMS = service_dslite
 
-AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils
-
-AM_LDFLAGS =  -lpthread -lz -levent -levent_core -levent_extra
-
 service_dslite_SOURCES = service_dslite.c
-
+service_dslite_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils
+service_dslite_LDFLAGS = -levent -levent_core -levent_extra -lpthread
 service_dslite_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
-                    $(top_builddir)/source/services/lib/libsrvmgr.la \
-                    $(top_builddir)/source/sysevent/lib/libsysevent.la \
-                    $(top_builddir)/source/syscfg/lib/libsyscfg.la \
-                    $(top_builddir)/source/ulog/libulog.la
+                       $(top_builddir)/source/services/lib/libsrvmgr.la \
+                       $(top_builddir)/source/sysevent/lib/libsysevent.la \
+                       $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                       $(top_builddir)/source/ulog/libulog.la
