RDKB-40564,RDKB-39674,RDKB-39677:Replace bin invoc & Boot time optimiz
Reason for change:
1. Non-xb3 platforms are using scripts to bring up lan.This change enables all plaforms to be on par with xb3's binary based lan bring up.
2. Remove system() or equivalent function calls using c API on Utopia
3. Converting script based handlers to C based handler - Uthopia lan_handler.sh
Test Procedure: Check for boot uptimes and regression. For further test scenarios please refer US
Risks: Medium
Signed-off-by:BudimeVigneshwar_Prasad@comcast.com

(cherry picked from commit 32eb2671d45cb07a7bcf91ced8d2610ffec427e9)

RDKB-40670 : Not able to access admin UI from client

Reason for change: Not able to access admin UI from client using 10.0.0.1 ip
Test Procedure: Should be Able to access Admin UI from Client using 10.0.0.1 ip
Risks: Low
Signed-off-by:BudimeVigneshwar_Prasad@comcast.com

Change-Id: Iff12b60719e6200716d3e0d11a817ff8a721ad4a

RDKB-41109 : Modifying event handler for ipv4-resync

Reason for change: Modifying event handler for ipv4-resync in ipv4.c to call service_dhcp
Test Procedure: Check for boot uptime and regression and no ipv4 issues should be seen
Risks: Low
Signed-off-by:BudimeVigneshwar_Prasad@comcast.com

Change-Id: I14fbdd17f2439ceaf9732dacb3185f84cdf8ba3f

RDKB-41294 : Eth backhaul connectivity issue in PODS

Reason for change: Eth backhaul connectivity issue in PODS
Test Procedure: Eth backhaul connectivity issue in GW devices should be resolved
Risks: Low
Signed-off-by:BudimeVigneshwar_Prasad@comcast.com

Change-Id: I8243a50112d785b221313c96d0a0f22a22c88813

RDKB-41294: Add CORE_NET_LIB macro for sysevent c registration

Reason for change: When we disable corenet lib, We will get the linking issue in Utopia.
This change will avoid this issue by registering script based handlers when core net disabled
Test Procedure:
Enable core net distro feature, Verify console log for c based handlers
Disable core net distro feature, Verify console log for scipt based h

--- a/configure.ac
+++ b/configure.ac
@@ -115,6 +115,20 @@ AC_CONFIG_FILES([
    source/service_dslite/Makefile
 ])] )
 
+# Checks for Core net lib Feature Support
+AC_ARG_ENABLE([core_net_lib_feature_support],
+[  --enable-core_net_lib_feature_support=val Turn on core_net_lib Feature, val=true or false],
+[case "${enableval}" in
+  yes) core_net_lib_feature_support=true ;;
+  no)  core_net_lib_feature_support=false ;;
+  *) AC_MSG_ERROR([bad value ${enableval} for --enable-core_net_lib_feature_support]) ;;
+esac],[core_net_lib_feature_support=true])
+AM_CONDITIONAL(CORE_NET_LIB_FEATURE_SUPPORT, test x"$core_net_lib_feature_support" = x"true")
+AM_COND_IF( [CORE_NET_LIB_FEATURE_SUPPORT], [
+AC_CONFIG_FILES([
+   source/service_dhcp/Makefile
+])] )
+
 AC_CONFIG_FILES(
 	Makefile
 	source/Makefile
@@ -135,7 +149,6 @@ AC_CONFIG_FILES(
 	source/scripts/init/src/execute_dir/Makefile
 	source/services/Makefile
 	source/services/lib/Makefile
-	source/service_dhcp/Makefile
 	source/service_ipv6/Makefile
 	source/service_multinet/Makefile
 	source/service_routed/Makefile
