--- a/source/igd/src/Makefile.am
+++ b/source/igd/src/Makefile.am
@@ -19,32 +19,32 @@
 AM_CFLAGS = -D_ANSC_LINUX
 AM_CFLAGS += -D_ANSC_USER
 AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
-AM_CFLAGS += -D_LINUX
+AM_CFLAGS += -D_LINUX -pipe
 AM_CFLAGS += -DPAL_ULOG
 AM_CFLAGS += -DCONFIG_VENDOR_MODEL=\"\"
-AM_CFLAGS += $(PTHREAD_CFLAGS)
 
+AM_CPPFLAGS = -Wall -Wextra -Werror
 ACLOCAL_AMFLAGS = -I m4
 
 bin_PROGRAMS = IGD 
+IGD_CPPFLAGS = 	-I$(top_srcdir)/source/pal/upnp/include \
+		-I$(top_srcdir)/source/pal/xml/include \
+		-I$(top_srcdir)/source/pal/kernel/include \
+		-I$(top_srcdir)/source/pal/include \
+		-I$(top_srcdir)/source/pal/log/include \
+		-I$(top_srcdir)/source/igd/src/inc \
+		-I$(top_srcdir)/source/include \
+		-I$(top_srcdir)/source/include/utapi
 
 IGD_SOURCES = igd_service_wan_ethlink_cfg.c igd_device_root.c igd_utility.c igd_device_lan.c igd_service_wan_commif_cfg.c igd_action_port_mapping.c igd_device_wan_connect.c igd_device_wan.c igd_platform_independent_inf.c igd_service_lanhostconfigmgmt.c igd_service_wan_connect.c igd_service_layer3_fwd.c
 
-IGD_CPPFLAGS = -I$(top_srcdir)/source/pal/upnp/include \
-               -I$(top_srcdir)/source/pal/xml/include \
-               -I$(top_srcdir)/source/pal/kernel/include \
-               -I$(top_srcdir)/source/pal/include \
-               -I$(top_srcdir)/source/pal/log/include \
-               -I$(top_srcdir)/source/igd/src/inc \
-               -I$(top_srcdir)/source/include \
-               -I$(top_srcdir)/source/include/utapi
+IGD_LDFLAGS =  -lpthread -lz -lthreadutil -Bdynamic -lupnp
+
 
 IGD_LDADD = $(top_builddir)/source/services/lib/libsrvmgr.la \
-            $(top_builddir)/source/sysevent/lib/libsysevent.la \
-            $(top_builddir)/source/ulog/libulog.la \
-            $(top_builddir)/source/utctx/lib/libutctx.la \
-            $(top_builddir)/source/pal/libpal.la \
-            $(top_builddir)/source/utapi/lib/libutapi.la \
-            $(top_builddir)/source/syscfg/lib/libsyscfg.la
-
-IGD_LDFLAGS = -lthreadutil -Bdynamic -lupnp $(PTHREAD_LIBS)
+             $(top_builddir)/source/sysevent/lib/libsysevent.la \
+             $(top_builddir)/source/ulog/libulog.la \
+             $(top_builddir)/source/utctx/lib/libutctx.la \
+             $(top_builddir)/source/pal/libpal.la \
+             $(top_builddir)/source/utapi/lib/libutapi.la \
+             $(top_builddir)/source/syscfg/lib/libsyscfg.la
