RDKCOM-2689: RDKBDEV-790: autotools cleanup
Reason for change:
 - Drop hardcoded references to /var/tmp/pc-rdkb from include paths
   etc. There should be no absolute include paths in the source code.
 - Add -lrt to AM_LDFLAGS when building the firewall binary. The
   firewall.c source contains references to shm_open(), so should be
   linked with -lrt.
 - Fix quoting for PLATFORM_HAL_SYNDICATION test. Avoid warnings when
   running configure:
    ./configure: line 12402: test: =: unary operator expected
 - Sort and reformat AC_CONFIG_FILES in configure.ac
 - Drop unnecessary attempts to link with zlib
 - Add -lcimplog to LDFLAGS as required + fix cimplog.h include path
 - Drop unnecessary $(top_srcdir)/source include paths
 - Drop global -lpthread
 - Don't add dirs above ${top_srcdir} to include paths
autotools cleanup: drop attempts to install utapi_wlan.h and
libsysevent_internal.h.
These options are not correct and result in a directory named
"image.." being created in the OE workdir. Since these headers (and
all other headers) are installed manually via the utopia recipe
there's no clear reason to try to install these two as part of
"make install".
drop legacy genautotools.ini

Test Procedure: Buile and Basic sanity
Risks: None.

Signed-off-by: Andre McCurdy <armccurdy@gmail.com>
Change-Id: If9b4f800ec95d8c28c4e93b66ae54a93e887e148

--- a/source/service_dhcp/Makefile.am
+++ b/source/service_dhcp/Makefile.am
@@ -16,25 +16,25 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##########################################################################
+
+AM_CFLAGS = -fno-exceptions -Wall -Wextra
+
 bin_PROGRAMS = service_dhcp
 
-AM_CFLAGS = -fno-exceptions -Os -Wall -Wextra
-AM_LDFLAGS =  -lpthread -lz -lccsp_common $(DBUS_LIBS)
-service_dhcp_CPPFLAGS = -I$(top_srcdir)/include \
-						-I$(top_srcdir)/source/include \
-						-I$(top_srcdir)/source/util/utils \
-                                                -I$(top_srcdir)/source/util/print_uptime \
-						-I$(top_srcdir)/source/service_dhcp/include \
-						$(DBUS_CFLAGS) \
-						-I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 \
-						-I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
+AM_LDFLAGS =  -lpthread -lz -lccsp_common $(DBUS_LIBS) -lsecure_wrapper
+service_dhcp_SOURCES = dhcp_server_functions.c lan_handler.c service_dhcp.c service_dhcp_server.c service_ipv4.c
 
-service_dhcp_SOURCES = service_dhcp.c lan_handler.c \
-                       dhcp_server_functions.c service_dhcp_server.c \
-                       service_ipv4.c
+service_dhcp_CPPFLAGS = -I$(top_srcdir)/source/include \
+                        -I$(top_srcdir)/source/util/utils \
+                        -I$(top_srcdir)/source/util/print_uptime \
+                        -I$(top_srcdir)/source/service_dhcp/include \
+                        $(DBUS_CFLAGS) \
+                        -I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 \
+                        -I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
 
 service_dhcp_LDADD = $(top_builddir)/source/util/utils/libutopiautil.la \
-		     $(top_builddir)/source/sysevent/lib/libsysevent.la \
-		     $(top_builddir)/source/syscfg/lib/libsyscfg.la \
+                     $(top_builddir)/source/sysevent/lib/libsysevent.la \
+                     $(top_builddir)/source/syscfg/lib/libsyscfg.la \
                      $(top_builddir)/source/util/print_uptime/libprint_uptime.la \
 		     -ltelemetry_msgsender
+
