RDKB-40900: RDKB support extender/nonrouter profile.
Reason for change:
1. New user story as per RDKB-40717.

Test Procedure:
1. Test extender profile.
2. Test secondary wan support.

Risks: None
Signed-off-by: arunkumar_palanichamy@comcast.com

RDKB-40900: RDKB support extender/nonrouter profile.

Reason for change:
1. New user story as per RDKB-40717.

Test Procedure:
1. Test extender profile.
2. Test secondary wan support.

Change-Id: I2627c0628c35e4de3c8c7cb157af966ba10c487c
Risks: None
Signed-off-by: arunkumar_palanichamy@comcast.com
(cherry picked from commit 3ff5c7e1a9e10110f23c7138f97f31233062f98b)

RDKB-42337: brlan0&brlan1 has ip in extender mode.

Reason for change:
1. Brlan0 and brlan1 ip are assigned
   and its same as primary gateway.
   hence dont assign ip in extender mode.

Test Procedure:
1. Test all lan functionality.

Change-Id: I720663a0087f90c4772a46cd246d4f914faec07b
Risks: None
Signed-off-by: arunkumar_palanichamy@comcast.com

RDKB-42194: service wan not registered for extender mode.

Reason for change:
1. Add service wan binary in extender mode
  to support wan fail over simulation xb to xb

Test Procedure:
1. Test Wan fail over.

Change-Id: I68a5340cd300c1dbe56aac30b879d39582dba540
Risks: None
Signed-off-by: arunkumar_palanichamy@comcast.com

RDKB-42746 :  Some of wanfailover changes are not under macro

Reason for change: Some of wanfailover changes are not under macro

Test Procedure:
Validate ext mode
Ext -> Router switching
Validate DeviceNetworkingMode tr181
validate dhcp server config in ext mode and make sure brRWAN is getting ip address

Change-Id: I32dbf67d67ca6a2c2ecdd7ee0be22f898ddca140
Risks: low
Signed-off-by: Santosh Nayak SantoshRamesh_Nayak@cable.comcast.com

--- a/configure.ac
+++ b/configure.ac
@@ -129,6 +129,25 @@ AC_CONFIG_FILES([
    source/service_dhcp/Makefile
 ])] )
 
+FEATURE_RDKB_EXTENDER=no
+AC_ARG_ENABLE([extender],
+        AS_HELP_STRING([--enable-extender],[enable extender]),
+        [
+          case "${enableval}" in
+           yes) FEATURE_RDKB_EXTENDER=yes ;;
+           no) AC_MSG_ERROR([extender is disabled]) ;;
+          *) AC_MSG_ERROR([bad value ${enableval} for --enable-extender ]) ;;
+           esac
+           ],
+         [echo "extender is disabled."])
+
+AM_CONDITIONAL([FEATURE_RDKB_EXTENDER], [test $FEATURE_RDKB_EXTENDER = yes])
+
+AM_COND_IF( [FEATURE_RDKB_EXTENDER], [
+AC_CONFIG_FILES([
+    source/service_deviceMode/Makefile
+])] )
+
 AC_CONFIG_FILES(
 	Makefile
 	source/Makefile
