RDKB-42625 : Using libSyscallWrapper to translate system/popen in utopia
Reason for change: Need secure popen() to prevent command injection
Test Procedure: Build and verify
Risks:None

Signed-off-by: srasu759 <Sivagami_Rasu@comcast.com>
(cherry picked from commit 70a25c3be6e71dce12198868347d1ac235466c33)
Signed-off-by: srasu759 <Sivagami_Rasu@comcast.com>
(cherry picked from commit cc533e04b25a6b42edf6d771eb3d0addbac8b1dc)
Change-Id: I7a09df7834dfac1855757bc8d5e09581f3506474

--- a/source/sysevent/lib/Makefile.am
+++ b/source/sysevent/lib/Makefile.am
@@ -27,3 +27,5 @@ lib_LTLIBRARIES = libsysevent.la
 libsysevent_la_SOURCES = libsysevent.c
 
 libsysevent_la_CPPFLAGS = -I$(top_srcdir)/source/include
+
+libsysevent_la_LDFLAGS = -lsecure_wrapper
