RDKB-43354: Using libSyscallWrapper to translate system/popen in utopia
Reason for change: Need secure popen() to prevent command injection
Test Procedure: Build and verify
Risks:None

Signed-off-by: srasu759 <Sivagami_Rasu@comcast.com>
(cherry picked from commit b50dc39519b60a7e8ced172bfc1f3115da21214d)
Change-Id: I79231f7cc76654efd62a4f3261122dd17b7006c8

--- a/source/macclone/Makefile.am
+++ b/source/macclone/Makefile.am
@@ -31,7 +31,7 @@ macclone_CPPFLAGS = -I$(top_srcdir)/source/pal/upnp/include \
                     -I$(top_srcdir)/source/pal/log/include \
                     $(DBUS_CFLAGS)
 
-macclone_LDFLAGS = $(DBUS_LIBS)
+macclone_LDFLAGS = $(DBUS_LIBS) -lsecure_wrapper
 
 macclone_LDADD = $(top_builddir)/source/syscfg/lib/libsyscfg.la \
                  $(top_builddir)/source/sysevent/lib/libsysevent.la \
